FLY-3871, FLY-3711 issues fixed

--- a/findly-builder/src/app/components/facets/facets.component.html
+++ b/findly-builder/src/app/components/facets/facets.component.html
@@ -590,7 +590,9 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="filter-btn" (click)="clickConfiguredFacet()">
+                                <div class="filter-btn" (click)="clickConfiguredFacet()" tooltipClass="tooltip-global-"
+                                    [container]="'body'" ngbTooltip='Click here to configure field'
+                                    placement="top-right">
                                     <img src="assets/icons/facets/rangeslider.svg">
                                 </div>
                             </div>
