--- a/findly-builder/src/app/components/result-templates/result-templates.component.scss
+++ b/findly-builder/src/app/components/result-templates/result-templates.component.scss
@@ -533,6 +533,7 @@
         line-height: 20px;
         color: #5F6368;
         text-align: left;
+        display: block;
         img{
             margin-left: 10px;
         }
