updated alignmnet issues

--- a/findly-builder/src/app/components/index/index.component.scss
+++ b/findly-builder/src/app/components/index/index.component.scss
@@ -390,6 +390,7 @@
             box-sizing: border-box;
             border-radius: 4px;
             width: 100%;
+            min-height: 60px;
             // margin-right: 8px;
             // height: calc(100vh - 215px);
           }
