FLY-3528 updated weights dropdown

--- a/findly-builder/src/app/components/weights/weights.component.scss
+++ b/findly-builder/src/app/components/weights/weights.component.scss
@@ -429,3 +429,7 @@
   ::ng-deep .text-left-warning .tooltip-inner {
     text-align: left !important;
   }
+  .highlight {
+    font-weight: bold;
+  }
+  
