--- a/findly-builder/src/app/components/weights/weights.component.html
+++ b/findly-builder/src/app/components/weights/weights.component.html
@@ -8,8 +8,11 @@
         <div class="header-sec-stopwords">
             <div class="title">{{'weights.Weights'| translate}}</div>
             <div class="restore_text" *ngIf="weights.length">
-                <span class="lable_text mr-4" id="btn_openWeight" (click)="openAddNewWeight()"><img src="assets/icons/editor/plus-add.svg" class="mr-2" >{{'weights.add_searchable_field'| translate}}</span>
-                <span class="lable_text mr-2" id="btn_restoreWeight" (click)="restoreWeights();"><img src="assets/icons/return_black.svg">{{'weights.reset_to_default' | translate}}</span>
+                <span class="lable_text mr-4" id="btn_openWeight" (click)="openAddNewWeight()"><img
+                        src="assets/icons/editor/plus-add.svg" class="mr-2">{{'weights.add_searchable_field'|
+                    translate}}</span>
+                <span class="lable_text mr-2" id="btn_restoreWeight" (click)="restoreWeights();"><img
+                        src="assets/icons/return_black.svg">{{'weights.reset_to_default' | translate}}</span>
                 <span class="clock_img d-none"><img src="assets/icons/clock.svg"></span>
 
             </div>
@@ -26,29 +29,47 @@
                     <div class="content-body" *ngFor="let weightModal of weights; let i = index">
                         <div class="col-2 name">
                             <div>
-                                <img class="pr-1" *ngIf="weightModal.showFieldWarning && (weightModal.showFieldWarning !== 'false')" src="assets/icons/info-blue.svg" placement="left" tooltipClass="{{modifyFieldWarningMsg(weightModal.showFieldWarning)?'my-custom-warning-class':'text-left-warning'}}" container="body" ngbTooltip='{{fieldWarnings[weightModal.showFieldWarning] || weightModal.showFieldWarning}}'>                                {{weightModal.name}}
+                                <img class="pr-1"
+                                    *ngIf="weightModal.showFieldWarning && (weightModal.showFieldWarning !== 'false')"
+                                    src="assets/icons/info-blue.svg" placement="left"
+                                    tooltipClass="{{modifyFieldWarningMsg(weightModal.showFieldWarning)?'my-custom-warning-class':'text-left-warning'}}"
+                                    container="body"
+                                    ngbTooltip='{{fieldWarnings[weightModal.showFieldWarning] || weightModal.showFieldWarning}}'>
+                                {{weightModal.name}}
                             </div>
-                            <div class="pre_defined d-none" *ngIf="!weightModal.isField">{{'weights.SYSTEM-DEFINED'| translate}}</div>
+                            <div class="pre_defined d-none" *ngIf="!weightModal.isField">{{'weights.SYSTEM-DEFINED'|
+                                translate}}</div>
                             <!-- <div class="pre_defined" *ngIf="!weightModal.isField">{{'weights.PRE-DEFINED'| translate}}</div> -->
                         </div>
                         <div class="col-6 desc text-truncate">
                             <span *ngIf="currentEditIndex !== i">{{weightModal.desc}}</span>
                             <div class="kr-sg-input-text-area" *ngIf="currentEditIndex === i">
-                                <textarea [(ngModel)]="weightModal.desc" (keyup)="disableCancle = false" placeholder="Short Description" class="input-text weighDesc" maxlength="250"></textarea>
+                                <textarea [(ngModel)]="weightModal.desc" (keyup)="disableCancle = false"
+                                    placeholder="Short Description" class="input-text weighDesc"
+                                    maxlength="250"></textarea>
                             </div>
                         </div>
                         <div class="col-4 sliderContainer">
                             <div class="range-slider">
-                                <app-range-slider [customClass]='"weightsSlider"'  [allData]='weightModal.sliderObj' (valueEvent)="valueEvent($event,weightModal)"></app-range-slider>
+                                <app-range-slider [customClass]='"weightsSlider"' [allData]='weightModal.sliderObj'
+                                    (valueEvent)="valueEvent($event,weightModal)"></app-range-slider>
                             </div>
                             <div class="sliderVal">{{weightModal.sliderObj.default}}</div>
                             <div class="action_links" *ngIf="(currentEditIndex !== i)">
-                                <span class="actions-links pr-4" id="btn_editWeight" (click)="editWeight(weightModal,i)"><img class="action_icon" [container]="'body'" ngbTooltip='Edit' src="assets/images/edit-pencil.svg"></span>
-                                <span class="actions-links" id="btn_deleteWeight" ngbTooltip='Delete' [container]="'body'" (click)="deleteWeight(weightModal,$event,i)"><img class="action_icon" src="assets/icons/delete.svg"></span>
+                                <span class="actions-links pr-4" id="btn_editWeight"
+                                    (click)="editWeight(weightModal,i)"><img class="action_icon" [container]="'body'"
+                                        ngbTooltip='Edit' src="assets/images/edit-pencil.svg"></span>
+                                <span class="actions-links" id="btn_deleteWeight" ngbTooltip='Delete'
+                                    [container]="'body'" (click)="deleteWeight(weightModal,$event,i)"><img
+                                        class="action_icon" src="assets/icons/delete.svg"></span>
                             </div>
                             <div class="action_links editBlock" *ngIf="currentEditIndex === i">
-                                <span class="actions-links pr-1" id="btn_confirmWeightEdit" (click)="weightModal.desc = currentEditDesc;currentEditIndex = -1"><img class="action_icon" src="assets/images/Gray-Close-withBorder.svg"></span>
-                                <span class="actions-links" id="btn_cancelWeightEdit" (click)="currentEditIndex = -1"><img class="action_icon" src="assets/images/Gray-tick-withBorder.svg"></span>
+                                <span class="actions-links pr-1" id="btn_confirmWeightEdit"
+                                    (click)="weightModal.desc = currentEditDesc;currentEditIndex = -1"><img
+                                        class="action_icon" src="assets/images/Gray-Close-withBorder.svg"></span>
+                                <span class="actions-links" id="btn_cancelWeightEdit"
+                                    (click)="currentEditIndex = -1"><img class="action_icon"
+                                        src="assets/images/Gray-tick-withBorder.svg"></span>
                             </div>
                         </div>
                     </div>
@@ -57,8 +78,12 @@
                     <!-- <div class="add_btn_sec">
                 </div> -->
                     <div class="cancel_save_sec">
-                        <button [ngClass]="{'d-none':!weights.length}" class="kr-sg-button-secondary btn_lg" id="btn_discardWeightChanges" [disabled]="disableCancle" (click)="setDataToActual()">{{'weights.cancel'| translate}}</button>
-                        <button [ngClass]="{'d-none':!weights.length}" class="kr-sg-button-primary btn_lg" id="btn_confirmWeightChanges" (click)="addOrUpddate(weights,null,'edit')">{{'weights.save_weights' | translate}}</button>
+                        <button [ngClass]="{'d-none':!weights.length}" class="kr-sg-button-secondary btn_lg"
+                            id="btn_discardWeightChanges" [disabled]="disableCancle"
+                            (click)="setDataToActual()">{{'weights.cancel'| translate}}</button>
+                        <button [ngClass]="{'d-none':!weights.length}" class="kr-sg-button-primary btn_lg"
+                            id="btn_confirmWeightChanges"
+                            (click)="addOrUpddate(weights,null,'edit')">{{'weights.save_weights' | translate}}</button>
                     </div>
                 </div>
             </section>
@@ -69,61 +94,74 @@
 <kr-modal modalType="center" modalClass="addWeightModalComponent modal_popups_" #addDditWeightPop>
     <div class="modal-header">
         <div class="title">{{currentEditIndex>-1?'Edit':'Add'}} Searchable Field</div>
-        <div class="close_icon"><img id="btn_closeWeightModal" (click)="closeAddEditWeight()" src="assets/icons/modal-close.svg"></div>
+        <div class="close_icon"><img id="btn_closeWeightModal" (click)="closeAddEditWeight()"
+                src="assets/icons/modal-close.svg"></div>
     </div>
-    <perfect-scrollbar class="perfect-scroll-modal-body" #perfectScroll> 
+    <perfect-scrollbar class="perfect-scroll-modal-body" #perfectScroll>
         <div class="modal-body textAlignLeft" *ngIf="addEditWeighObj">
             <div class="search_block" *ngIf="!addEditWeighObj._id">
                 <div class="row m-0 align-items-center">
-                    <div class="kr-sg-dropdowns col-12 p-0" [ngClass]="{'disabled': addEditWeighObj._id}">
-                        <div class="kr-sg-input-search dropdown dropdown-open line-height-0">
-                            <button class="dropdown-toggle dropdown-input search-with-dropdown" data-toggle="dropdown"></button>
-                            <input [class.err-block]="((!addEditWeighObj.fieldName || !addEditWeighObj.fieldName.length) && submitted)" type="text" placeholder="Search For Field" class="input-search dropdown-toggle dropdown-input" data-toggle="dropdown" [ngClass]="{'pl-33':!addEditWeighObj.fieldName}"  [(ngModel)]="addEditWeighObj.fieldName" maxlength="60">
-                            <!-- <input [class.err-block]="((!addEditWeighObj.fieldName || !addEditWeighObj.fieldName.length) && submitted)" type="text" placeholder="Search For Field" class="input-search dropdown-toggle dropdown-input" data-toggle="dropdown" [ngClass]="{'pl-33':!addEditWeighObj.fieldName}" (keyup)="getFieldAutoComplete(addEditWeighObj.fieldName)" [(ngModel)]="addEditWeighObj.fieldName" maxlength="60"> -->
-                            <img *ngIf="(!addEditWeighObj.fieldName || !addEditWeighObj.fieldName.length) && submitted" id="weightNameWarning" src="assets/icons/warning_escalation.svg" style="top: 29%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
-                            <!-- <input type="text" placeholder="Search For Field" class="input-search dropdown-toggle dropdown-input" [ngClass]="{'pl-33':!addEditWeighObj.fieldName}" (keyup)="getFieldAutoComplete(addEditWeighObj.fieldName)" [(ngModel)]="addEditWeighObj.fieldName" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
-                                (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'"> -->
-                            <img [src]="searchImgSrc" class="search-icon" *ngIf="!addEditWeighObj.fieldName">
-                            <img class="close-icon" *ngIf="addEditWeighObj.fieldName" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':addEditWeighObj.fieldName}" (click)="clearField();">
-                            <!-- <input type="text" placeholder="Search For Field" class="input-search dropdown-toggle dropdown-input" data-toggle="dropdown" (keyup)="getFieldAutoComplete(addEditWeighObj.fieldName)" [(ngModel)]="addEditWeighObj.fieldName">
-                        <img src="assets/images/search_gray.svg" class="search-icon">                                                          -->
-                            <ul class="dropdown-menu content-menu scroll-max-250">
-                                <perfect-scrollbar class="scroll-max-250">
-                                    <div class="scroll-max-250">
-                                        <li *ngFor="let suggesition of fields | filter : [addEditWeighObj.fieldName, 'fieldName'] " id="btn_selectWeightsField" (click)="selectedField(suggesition)">
-                                            <a>{{suggesition.fieldName}}</a>
-                                        </li>
-                                    </div>
-                                </perfect-scrollbar>
-                                    
-                            </ul>
+                    <div class="kr-sg-dropdowns col-12 p-0" ngbDropdown>
+                        <div class="dropdown dropdown-open">
+                            <button class="dropdown-toggle dropdown-input" id="dropdownBasic1" data-toggle="dropdown"
+                                ngbDropdownAnchor (click)="clearcontentSrcW()">
 
+                                {{addEditWeighObj.fieldName? addEditWeighObj.fieldName :"Choose feild"}}
+
+                            </button>
+                            <ul class="dropdown-menu content-menu faq-filter-add col-12 mw-100"
+                                style="overflow-y: hidden;" ngbDropdownMenu>
+                                <li class="search-box" ngbDropdownItem>
+                                    <input id="searchBoxIdW" autocomplete="off" type="text" placeholder="Search"
+                                        class="seach-input" autofocus [(ngModel)]="search_FieldName" />
+                                </li>
+                                <perfect-scrollbar class="scroll-search-field h-178">
+                                    <ng-container>
+                                        <li ngbDropdownItem
+                                            *ngFor="let suggesition of fields | filter : [search_FieldName, 'fieldName']"
+                                            (click)="addEditWeighObj.fieldName=suggesition.fieldName;selectedField(suggesition)"
+                                            [ngClass]="{'highlight':addEditWeighObj.fieldName == suggesition.fieldName}">
+                                            {{ suggesition.fieldName }}
+                                        </li>
+                                    </ng-container>
+                                </perfect-scrollbar>
+                            </ul>
                         </div>
                     </div>
+
                 </div>
             </div>
-            <div class="kr-sg-input-text mb-25" *ngIf="addEditWeighObj._id" [ngClass]="{'disabled': addEditWeighObj._id}">
+            <div class="kr-sg-input-text mb-25" *ngIf="addEditWeighObj._id"
+                [ngClass]="{'disabled': addEditWeighObj._id}">
                 <div class="label-text">{{'weights.weight_name'| translate}}</div>
-                <input type="text" id="input_weightsName" maxlength="60" [(ngModel)]="addEditWeighObj.name" placeholder="Placeholder text" class="input-text">
+                <input type="text" id="input_weightsName" maxlength="60" [(ngModel)]="addEditWeighObj.name"
+                    placeholder="Placeholder text" class="input-text">
             </div>
             <div class="kr-sg-input-text-area mb-25">
                 <div class="label-text">{{'weights.description'| translate}}</div>
-                <textarea id="input_weightsDesc" [(ngModel)]="addEditWeighObj.desc" maxlength="250" placeholder="Short Description" class="input-text"></textarea>
+                <textarea id="input_weightsDesc" [(ngModel)]="addEditWeighObj.desc" maxlength="250"
+                    placeholder="Short Description" class="input-text"></textarea>
             </div>
             <div class="kr-sg-input-text">
                 <div class="label-text">{{'weights.set_weight'| translate}}</div>
                 <div class="d-flex m-0 slider_sec">
                     <div class="range_slider add-searchable-feild-range-slider">
-                        <app-range-slider [customClass]='"weightsSlider"'  [allData]='addEditWeighObj.sliderObj' (valueEvent)="valueEvent($event,addEditWeighObj)"></app-range-slider>
+                        <app-range-slider [customClass]='"weightsSlider"' [allData]='addEditWeighObj.sliderObj'
+                            (valueEvent)="valueEvent($event,addEditWeighObj)"></app-range-slider>
                     </div>
-                    <div class="sliderVal" >{{addEditWeighObj.sliderObj.default}}</div>
+                    <div class="sliderVal">{{addEditWeighObj.sliderObj.default}}</div>
                 </div>
             </div>
         </div>
     </perfect-scrollbar>
     <div class="modal-footer text-left" *ngIf="addEditWeighObj">
-        <button id="btn_weightsSave" type="button" class="kr-sg-button-danger btn_lg float-left" *ngIf="currentEditIndex>-1" (click)="deleteWeight(addEditWeighObj,$event,currentEditIndex)">{{'weights.delete' | translate}}</button>
-        <button id="btn_weightseditSave" type="button" class="kr-sg-button-primary btn_lg mr-0 float-right" (click)="addEditWeight()">{{(currentEditIndex>-1)?'Update':'Add'}}</button> <!-- [disabled]="!addEditWeighObj.name" -->
-        <button id="btn_weightsClose" type="button" class="kr-sg-button-secondary btn_lg float-right" (click)="closeAddEditWeight()">{{'weights.cancel'| translate}}</button>
+        <button id="btn_weightsSave" type="button" class="kr-sg-button-danger btn_lg float-left"
+            *ngIf="currentEditIndex>-1"
+            (click)="deleteWeight(addEditWeighObj,$event,currentEditIndex)">{{'weights.delete' | translate}}</button>
+        <button id="btn_weightseditSave" type="button" class="kr-sg-button-primary btn_lg mr-0 float-right"
+            (click)="addEditWeight()">{{(currentEditIndex>-1)?'Update':'Add'}}</button>
+        <!-- [disabled]="!addEditWeighObj.name" -->
+        <button id="btn_weightsClose" type="button" class="kr-sg-button-secondary btn_lg float-right"
+            (click)="closeAddEditWeight()">{{'weights.cancel'| translate}}</button>
     </div>
 </kr-modal>
