FLY-3833 workbench validations updates

--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -578,10 +578,13 @@
                 </div>
                 <div class="position-relative ">
                   <input type="text" placeholder="{{'workbench.enter_source_field' | translate}}"
+                  id="rename_newname" (change)="inputChanged('rename_newname')"
                     (keyup)="changesDetected = true" class="input-text dropdown-toggle dropdown-input"
                     data-toggle="dropdown" [(ngModel)]="
                     newMappingObj.field_mapping.defaultValue.source_field
                   " />
+                  <img id="infoWarning2" src="assets/icons/warning_escalation.svg" style="display: none;"
+                        height="12" width="12" />
                   <ul class="source-field-dropdown dropdown-menu content-menu" id="fields-search-with-dropdown-menu"
                     [ngClass]="{'no-data-match-border-0':!(fields | filter : [newMappingObj.field_mapping.defaultValue.source_field, 'fieldName']).length}">
                     <perfect-scrollbar class="scroll-search-field h-178">
@@ -615,9 +618,11 @@
                 </div>
                 <div class="position-relative ">
                   <input type="text" placeholder="{{'workbench.enter_name' | translate}}"
-                    class="input-text dropdown-toggle dropdown-input" data-toggle="dropdown" [(ngModel)]="
-                    newMappingObj.field_mapping.defaultValue.target_field
-                  " />
+                   class="input-text dropdown-toggle dropdown-input" data-toggle="dropdown" 
+                   id="fieldname" (change)="inputChanged('fieldname')"
+                   [(ngModel)]="newMappingObj.field_mapping.defaultValue.target_field" />
+                   <img id="infoWarning" src="assets/icons/warning_escalation.svg" style="display: none;"
+                        height="12" width="12" />
                   <ul class="source-field-dropdown dropdown-menu content-menu" id="fields-search-with-dropdown-menu"
                     *ngIf="
                 newMappingObj.field_mapping.defaultValue.operation !==
@@ -655,7 +660,10 @@
                   {{'workbench.new_name' | translate}}
                 </div>
                 <input type="text" placeholder="{{'workbench.value' | translate}}" class="input-text"
-                  [(ngModel)]="newMappingObj.field_mapping.defaultValue.value" />
+                  id="set_value"
+                  [(ngModel)]="newMappingObj.field_mapping.defaultValue.value" (change)="inputChanged('set_value')"/>
+                  <img id="infoWarning1" src="assets/icons/warning_escalation.svg" style="display: none;"
+                        height="12" width="12" />
               </div>
               <div class="colse_form">
                 <img (click)="setResetNewMappingsObj()" src="assets/images/close-cross.svg" />
@@ -873,6 +881,7 @@
                 <div class="label-text">{{'workbench.source_field' | translate}}</div>
                 <div class="dropdown dropdown-open">
                   <button class="dropdown-toggle dropdown-input" id="dropdownBasic1" data-toggle="dropdown"
+                  [class.err-block]="((!(search_basic_fieldName2?.length) && submitted)||!(newMappingObj[selectedStage.type].defaultValue.source_field))"
                     ngbDropdownToggle (click)="clearcontentSrcD()">
                     {{newMappingObj[selectedStage.type].defaultValue.source_field?newMappingObj[selectedStage.type].defaultValue.source_field:"Choose
                     source field"}}
@@ -976,7 +985,9 @@
                           }}</span>
                         <mat-icon matChipRemove><img src="assets/images/close.svg" /></mat-icon>
                       </mat-chip>
-                      <input placeholder="{{'workbench.type_and_enter' | translate}}" [matChipInputFor]="chipList"
+                      <input placeholder="{{'workbench.type_and_enter' | translate}}" 
+                      [class.err-block]="((submitted)||!(newMappingObj[selectedStage.type].defaultValue.entity_types))" 
+                      [matChipInputFor]="chipList"
                         [matAutocomplete]="suggestedItems" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
                         [matChipInputAddOnBlur]="false" (matChipInputTokenEnd)="
                           addEntityList(
@@ -1016,6 +1027,7 @@
                         <mat-icon matChipRemove><img src="assets/images/close.svg" /></mat-icon>
                       </mat-chip>
                       <input placeholder="{{'workbench.type_and_enter' | translate}}" [matChipInputFor]="chipList"
+                      [class.err-block]="((!(newMappingObj[selectedStage.type].defaultValue.trait_groups?.length) && submitted))"
                         [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matAutocomplete]="suggestedItems"
                         [matChipInputAddOnBlur]="false" (matChipInputTokenEnd)="
                           addTraitsList(
@@ -1044,6 +1056,7 @@
                 <div class="label-text">{{'workbench.target_field' | translate}}</div>
                 <div class="position-relative ">
                   <input type="text" placeholder="{{'workbench.value' | translate}}"
+                  [class.err-block]="((!(newMappingObj[selectedStage.type].defaultValue.target_field?.length) && submitted))"
                     class="input-text dropdown-toggle dropdown-input" data-toggle="dropdown" [(ngModel)]="
                       newMappingObj[selectedStage.type].defaultValue.target_field
                     " />
@@ -1094,7 +1107,7 @@
         </div>
       </perfect-scrollbar>
       <div class="footer-simulate-form simulatebtnContainer">
-        <span class="float-right"><button class="kr-sg-button-primary btn_lg mr-0" id="simulateBtn" (click)="simulate()"
+        <span class="float-right"><button class="kr-sg-button-primary btn_lg mr-0" id="simulateBtn" (click)="validation()"
             placement="top-right" tooltipClass="workbench_tolltips m-0" [disabled]="simulteObj.simulating"
             ngbTooltip="{{'workbench.simulate_to_check_how_the_changes_reflect' | translate}}">
             <img src="assets/images/simulate.svg" class="mr-1" />{{simulteObj.simulating ?('workbench.simulating' |
