--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -578,7 +578,7 @@
                 </div>
                 <div class="position-relative ">
                   <input type="text" placeholder="{{'workbench.enter_source_field' | translate}}"
-                  id="rename_newname" (change)="inputChanged('rename_newname')"
+                  id="rename_sourcefield" (change)="inputChanged('rename_sourcefield')"
                     (keyup)="changesDetected = true" class="input-text dropdown-toggle dropdown-input"
                     data-toggle="dropdown" [(ngModel)]="
                     newMappingObj.field_mapping.defaultValue.source_field
